# epidemic-seir-model

./: .gitignore  CMakeLists.txt  README.md  avviso.txt
apps/: CMakeLists.txt  main-seir.cpp  main-seir1.cpp  main-seir2.cpp  main-sim-graphics.cpp  main-sim.cpp
build-release/: epidemic.cbp
include/: SEIR.md  Simulation.md
include/seir/: SEIRimplementation.md  seir.hpp  seir1.hpp  seir2.hpp
include/simulation/: cluster.hpp  display.hpp  group.hpp  mobility_model.hpp  parameters.hpp  person.hpp  rectangle.hpp  simulation.hpp  world.hpp
scripts/: def-sim-graph.sh  def-sim.sh  quick-build.sh  testing.sh
sim_graph_build/apps/: sim-graphics
src/: CMakeLists.txt
src/seir/: CMakeLists.txt  seir.cpp  seir1.cpp  seir2.cpp
src/simulation/: CMakeLists.txt  cluster.cpp  display.cpp  group.cpp  mobility_model.cpp  position.cpp  random.cpp  rectangle.cpp  simulation.cpp  world.cpp
src/simulation/graphics/: display.cpp  display.hpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp
